--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -143,8 +143,9 @@ body {
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
-  margin: 5rem 15vw 8rem;
+  margin: 5rem 0 8rem;
   position: relative;
+  overflow: hidden;
 }
 #image-bar .image-link {
   display: flex;
